Version 1.2.4
-------------
	Release date: TBA
	
	Bug Fixes
	
		- Fixed blank search term error.

Version 1.2.3
-------------
	Release date: March 8, 2012
	
	Bug Fixes
	
		- Fixed track_stock flag for gift cards and is_gc flag on products

Version 1.2.2
-------------
	Release date: February 23, 2012
	
	Bug Fixes
	
		- Fixed errors resulting from gift card purchase, a casualty of the inventory tracking code
		- My Account page was pulling user info from the session rather than database.
		- Fixed product sorting on the front end.
		- Fixed undefined index error if customer ID does not exist in the Digital Product model. (thanks svizion)

	Other

		- Replaced depreciated encrypt sha1 function with native PHP sha1 function.
			
Version 1.2.1
------------
	Release date : January 30, 2012

	Bug Fixed

		- Fixed digital products folder references
		- Added track_stock to "get_cart_ready_product" function in Product_model
		- Fixed updating quantity if allow overstock buying is enabled on the view cart page.
		- fixed count_product which was stopping pagination on category pages.

Version 1.2
-------------
	Release date: January 16, 2012
	
	Bug Fixes
		
		- Replaced deprecated function in the credit card helper and missing HTML tags in the main header view.
		- Made admin and customer authentication use different cookie names to avoid conflicts.
		- Fixed various HTML errors.
		- Fixed height issues on "related products".
		- Fixed PHP errors associated with no image available on related products.
		- Support foreign characters in TinyMCE.
		- Fixed the get_homepage_boxes function.
		- Removed PHP warning when attempting to add a new product which does not have images. (thanks tfevens)
		
	Features
		
		- Added language support and extended internationalization capabilities.
		- Added support for Sage Pay payment gateway (Thanks to swicks).
		- Added support for digital products.
		- Added inventory support.