@@ -5,6 +5,7 @@ Version 1.2.4
 	Bug Fixes
 	
 		- Fixed blank search term error.
+		- Fixed admin order view error for is_gc flag.
 
 Version 1.2.3
 -------------
